# test

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  Makefile  WORKSPACE  WORKSPACE.bazel  flake.nix  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shell.nix
bazel/: deps.bzl  repositories.bzl
client/: .eslintrc.js  BUILD.bazel  README.md  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.config.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  BUILD.bazel
client/src/components/: CountBtn.tsx
client/src/components/Badge/: Badge.tsx
client/src/components/CountButton/: CountButton.tsx
client/src/components/CountButton/tests/: Badge.test.tsx
client/src/components/Header/: Header.tsx
client/src/components/ModeToggle/: ModeToggle.tsx
client/src/components/Page/: Page.tsx
client/src/components/ui/: badge.tsx  button.tsx
client/src/pages/: App.tsx
client/src/pages/Create/: index.tsx
cmd/backend/: BUILD.bazel  main.go
dev/nix/: shell-hook.sh  start-postgres.sh
dev/nix/tools/bazel-watcher/: default.nix
internal/: BUILD.bazel  db.go
internal/database/: BUILD.bazel  prompts.go  prompts_jobs.go  prompts_queries.go
internal/database/basestore/: BUILD.bazel  errors.go  handle.go  rows.go  store.go
internal/database/dbconn/: BUILD.bazel  config.go  connect.go  open.go
internal/database/dbutil/: BUILD.bazel  dbutil.go
migrations/: blah.sql
