"""Export all files for vite.
"""

load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

copy_to_bin(
    name = "src",
    srcs = glob([
        "**/*.css",
        "**/*.scss",
        "**/*.scss",
        "**/*.svg",
        "**/*.ts",
        "**/*.tsx",
        "**/*.js",
    ]),
    visibility = ["//client:__pkg__"],
)
