load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "backend_lib",
    srcs = ["main.go"],
    importpath = "backend",
    visibility = ["//visibility:private"],
    deps = [
        "//internal",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_chi_v5//middleware",
    ],
)

go_binary(
    name = "backend",
    embed = [":backend_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "backend_test",
    srcs = ["main_test.go"],
    embed = [":backend_lib"],
)
