load("//dev:go_defs.bzl", "go_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

go_library(
    name = "database",
    srcs = [
        "prompts.go",
    ],
    importpath = "articulate/internal/database",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_keegancsmith_sqlf//:sqlf",
        # "@com_github_sourcegraph_sourcegraph//internal/database/basestore"
    ],
)
