load("//dev:go_defs.bzl", "go_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "basestore",
    srcs = [
        "store.go",
    ],
    importpath = "articulate/internal/database/basestore",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/database/dbutil",
        "//lib/errors",
        "@com_github_google_uuid//:uuid",
        "@com_github_keegancsmith_sqlf//:sqlf",
        "@com_github_lib_pq//:pq",
        "@com_github_sourcegraph_log//:log",
        "@com_github_wk8_go_ordered_map_v2//:go-ordered-map",
        "@org_golang_x_exp//maps",
    ],
)
