load("//dev:go_defs.bzl", "go_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "basestore",
    srcs = [
        "errors.go",
        "handle.go",
        "rows.go",
        "store.go",
    ],
    importpath = "articulate/internal/database/basestore",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/database/dbutil",
        "@com_github_google_uuid//:uuid",
        "@com_github_keegancsmith_sqlf//:sqlf",
        "@com_github_lib_pq//:pq",
        "@com_github_pkg_errors//:errors",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
    ],
)
