load("//dev:go_defs.bzl", "go_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dbconn",
    srcs = [
        "config.go",
        "connect.go",
        "open.go",
    ],
    importpath = "articulate/internal/database/dbconn",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_caarlos0_env_v9",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//stdlib",
    ],
)
