load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dbutil",
    srcs = ["dbutil.go"],
    importpath = "articulate/internal/database/dbutil",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_jackc_pgconn//:pgconn",
        "@com_github_pkg_errors//:errors",
    ],
)
